projects/17-kubernetes-ingress-production-routing/manifests/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: ingress-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: hashicorp/http-echo:1.0.0
          args:
            - "-text=hello from api service"
          ports:
            - containerPort: 5678
