projects/17-kubernetes-ingress-production-routing/manifests/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: ingress-lab
spec:
  containers:
    - name: test-pod
      image: curlimages/curl:8.5.0
      command: ["sleep", "3600"]
